--- a/requirements.txt
+++ b/requirements.txt
@@ -1,156 +1,94 @@
-absl-py==1.0.0
-appdirs==1.4.4
+absl-py==1.1.0
 appnope==0.1.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
 asttokens==2.0.5
 astunparse==1.6.3
-attrs==21.4.0
 backcall==0.2.0
-beautifulsoup4==4.10.0
 black==22.1.0
-bleach==4.1.0
-bs4==0.0.1
-cachetools==5.0.0
-catkin-pkg==0.4.23
-certifi==2021.10.8
-cffi==1.14.5
+cachetools==5.2.0
+certifi==2022.5.18.1
 charset-normalizer==2.0.12
 click==8.0.4
-colorama==0.4.4
-cryptography==3.4.7
-cssselect==1.1.0
 cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.1
-defusedxml==0.7.1
-distro==1.5.0
-docutils==0.17.1
-empy==3.3.4
 entrypoints==0.4
 executing==0.8.2
-fake-useragent==0.1.11
-feedparser==6.0.8
-Flask==2.1.1
-flatbuffers==2.0
+Flask==2.1.2
+flatbuffers==1.12
 fonttools==4.29.1
-gast==0.5.3
-google-auth==2.6.4
+gast==0.4.0
+google-auth==2.6.6
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.44.0
-h5py==3.6.0
+grpcio==1.46.3
+h5py==3.7.0
 idna==3.3
-ifcfg==0.21
-img2pdf==0.4.1
-importlib-metadata==4.8.1
+importlib-metadata==4.11.4
 ipykernel==6.9.1
 ipython==8.0.1
-ipython-genutils==0.2.0
 itsdangerous==2.1.2
 jedi==0.18.1
-Jinja2==3.0.3
+Jinja2==3.1.2
 joblib==1.1.0
-jsonschema==4.4.0
 jupyter-client==7.1.2
 jupyter-core==4.9.2
-jupyterlab-pygments==0.1.2
-keras==2.8.0
+keras==2.9.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
-lark-parser==0.11.3
-libclang==13.0.0
-lxml==4.6.3
-Markdown==3.3.6
-MarkupSafe==2.0.1
+libclang==14.0.1
+Markdown==3.3.7
+MarkupSafe==2.1.1
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
-mistune==0.8.4
 mplot3d-dragger==0.0.0
 mypy-extensions==0.4.3
-nbclient==0.5.10
-nbconvert==6.4.0
-nbformat==5.1.3
 nest-asyncio==1.5.4
-netifaces==0.11.0
-notebook==6.4.7
 numpy==1.22.2
 oauthlib==3.2.0
-opencv-python==4.5.2.54
 opt-einsum==3.3.0
 packaging==21.3
+paho-mqtt==1.6.1
 pandas==1.4.1
-pandas-datareader==0.10.0
-pandocfilters==1.5.0
-parse==1.19.0
 parso==0.8.3
 pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
-pikepdf==3.0.0
 Pillow==9.0.1
 platformdirs==2.5.1
-prometheus-client==0.12.0
 prompt-toolkit==3.0.28
-protobuf==3.20.0
+protobuf==3.19.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser==2.20
-pydot==1.4.2
-pyee==8.2.2
 Pygments==2.11.2
 pyparsing==3.0.7
-pyppeteer==0.2.6
-PyQt5==5.15.4
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.0
-pyquery==1.4.3
-pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2021.3
-pywin32==303
-pywinpty==1.1.6
-PyYAML==5.4.1
 pyzmq==22.3.0
 requests==2.27.1
-requests-html==0.10.0
 requests-oauthlib==1.3.1
-rosdistro==0.8.3
-rospkg==1.3.0
 rsa==4.8
 scikit-learn==1.0.2
 scipy==1.8.0
 seaborn==0.11.2
-Send2Trash==1.8.0
-sgmllib3k==1.0.0
 six==1.16.0
 sklearn==0.0
-soupsieve==2.2.1
 stack-data==0.2.0
-tensorboard==2.8.0
+tensorboard==2.9.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
-tensorflow-io-gcs-filesystem==0.24.0
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
 termcolor==1.1.0
-terminado==0.12.1
-testpath==0.5.0
-tf-estimator-nightly==2.8.0.dev2021122109
 threadpoolctl==3.1.0
 tomli==2.0.1
 tornado==6.1
-tqdm==4.62.2
 traitlets==5.1.1
 typing_extensions==4.1.1
 urllib3==1.26.9
-w3lib==1.22.0
 wcwidth==0.2.5
-webencodings==0.5.1
-websockets==9.1
-Werkzeug==2.1.1
-wrapt==1.14.0
-xlrd==2.0.1
-yahoo-fin==0.8.9.1
-zipp==3.5.0
+Werkzeug==2.1.2
+wrapt==1.14.1
+zipp==3.8.0
